--- a/subs/Registration.html
+++ b/subs/Registration.html
@@ -7,7 +7,7 @@
 </head>
     <table width="100%">
         <td width = "20%">
-        <img src = "media/book.png" height="100px" width="100px"></h1>
+        <img src = "images/book.png" height="100px" width="100px"></h1>
         </td>
         <td align = "center">
             <h1>Book Store</h1>
