--- a/subs/cse.html
+++ b/subs/cse.html
@@ -7,7 +7,7 @@
 </head>
     <table width="100%">
         <td width = "20%">
-        <img src = "media/book.png" height="100px" width="100px"></h1>
+        <img src = "images/book.png" height="100px" width="100px"></h1>
         </td>
         <td align = "center">
             <h1>Book Store</h1>
@@ -28,14 +28,21 @@
                 <b><a href="../subs/cse.html">CSE</a></b>
             </th>
             <td rowspan="5" width="70%">
-                <h2><center>Civil Books</center></h2>
+                <h2><center>CSE Books</center></h2>
                 <table width="100%">
                     <tr>
-                        <td width = "20%" align="center"><img src="media/civil1.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td> 
-                        <td width = "20%" align="center"><img src="media/civil2.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/civil3.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/civil4.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/civil5.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/book1.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td> 
+                        <td width = "20%" align="center"><img src="images/book2.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/book3.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/book4.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/book5.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                    </tr>
+                    <tr>
+                        <td width = "20%" align="center"><img src="images/book6.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/book7.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/book8.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/book9.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/book10.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
                     </tr>
                 </table>
             </td>   
