--- a/subs/ece.html
+++ b/subs/ece.html
@@ -7,7 +7,7 @@
 </head>
     <table width="100%">
         <td width = "20%">
-        <img src = "media/book.png" height="100px" width="100px"></h1>
+        <img src = "images/book.png" height="100px" width="100px"></h1>
         </td>
         <td align = "center">
             <h1>Book Store</h1>
@@ -31,11 +31,11 @@
                 <h2><center>ECE Books</center></h2>
                 <table width="100%">
                     <tr>
-                        <td width = "20%" align="center"><img src="media/ece1.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td> 
-                        <td width = "20%" align="center"><img src="media/ece2.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/ece3.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/ece4.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/ece5.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/ece1.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td> 
+                        <td width = "20%" align="center"><img src="images/ece2.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/ece3.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/ece4.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/ece5.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
                     </tr>
                 </table>
             </td>   
