--- a/subs/eee.html
+++ b/subs/eee.html
@@ -7,7 +7,7 @@
 </head>
     <table width="100%">
         <td width = "20%">
-        <img src = "media/book.png" height="100px" width="100px"></h1>
+        <img src = "images/book.png" height="100px" width="100px"></h1>
         </td>
         <td align = "center">
             <h1>Book Store</h1>
@@ -31,11 +31,11 @@
                 <h2><center>EEE Books</center></h2>
                 <table width="100%">
                     <tr>
-                        <td width = "20%" align="center"><img src="media/eee1.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td> 
-                        <td width = "20%" align="center"><img src="media/eee2.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/eee3.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/eee4.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
-                        <td width = "20%" align="center"><img src="media/eee5.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/eee1.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td> 
+                        <td width = "20%" align="center"><img src="images/eee2.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/eee3.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/eee4.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
+                        <td width = "20%" align="center"><img src="images/eee5.jpeg" height="200px" width="150px"><br><b>Rs 2,375</b><br><button>Add to Cart</button><br><br><br></td>
                     </tr>
                 </table>
             </td>   
